--- a/style.css
+++ b/style.css
@@ -95,9 +95,10 @@
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     border: 1px solid white;
-    border-radius: 10px;
-    font-size: 15px;
-    padding: 5px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 600;
+    padding:10px;
 
 }
 
@@ -212,7 +213,59 @@ width: 170px;
 }
 
 /*handicrafted end  */
-
+.slider{
+    width: 85%;
+    height: 220px;
+    background-color: #edd15b;
+    margin: auto;
+    border-radius: 10px;
+    margin: 80px;
+    display: flex;
+    font-family: sans-serif;
+}
+.slide-left{
+    width: 10%;
+}
+.slide-left img{
+    width: 90%;
+    padding-top: 30px;
+}
+.slide-between{
+    width: 60%;
+    padding: 5px 10px;
+}
+#para{
+    font-size: 14px;
+    font-weight: 500;
+}
+#sign{
+    font-size: 25px;
+    font-weight: 600;
+}
+#price{
+    color: rgba(0, 0, 0, 0.407);
+    font-weight: 100;
+}
+#price-value{
+    font-weight: 600;
+}
+.slide-right{
+    width: 30%;
+}
+.slide-right a{
+    width: 60%;
+    background-color: #00754a;
+    text-decoration: none;
+    padding:18px 70px;
+    color: white;
+    position: relative;
+    top: 150px;
+    left: 30%;
+    border-radius:30px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+}
 /* Footer start */
 .footer {
     width: 100%;
