--- a/style.css
+++ b/style.css
@@ -164,10 +164,92 @@ border-radius: 20px;
 border: none;
 width: 170px;
 }
-
-
-
 /* about end */
+/* recomend start */
+.recomend{
+    width: 100%;
+    height: 300px;
+    background-color: #edebe9;
+    margin: auto;
+    margin-bottom: 60px;
+    /* display: flex; */
+}
+.rec{
+    width: 88%;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    margin: auto;
+    padding: 30px 0 ;
+}
+.rec p{
+    font-size:25px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1e3932;
+}
+.box{
+    width: 380px;
+    height: 160px;
+    background-color: #fff;
+    border-radius: 10px;
+    display: flex;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.a img{
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+}
+.a p{
+    padding-top: 15px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+.b{
+    padding-left: 20px;
+}
+#x{
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#y{
+    font-size: 11px;
+    padding: 10px 0;
+    color: gray;
+}
+.box-button{
+    width: 100px;
+    background-color: #00754a;
+    color: white;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 9px;
+    position: relative;
+    left: 100px;
+    top: 17px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.box-button p{
+    padding-left: 10px;
+}
+.box-button:hover{
+    background-color: #1e3932;
+    color: white;
+}
+.rec-slide{
+    display: flex;
+    margin: auto;
+    width: 90%;
+    gap:30px;
+}
+
+/* recomend end */
 /*handicrafted start  */
 .handcrafted {
     width: 100%;
